[package]
edition = "2021"
name = "aoc-22"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.29", features = ["derive"]}
error-stack = "0.2.4"
eyre = "0.6.8"
lazy-regex = "2.3.1"
nom = "7.1.1"
petgraph = "0.6.2"
rayon = "1.6.1"
thiserror = "1.0.37"
